h3 corretto, prove link

--- a/pages/Mc01.md
+++ b/pages/Mc01.md
@@ -3,10 +3,9 @@ layout: page
 title: Mc01
 ---
 
- [[Mc02|>](Mc02)
+ [capitolo successivo ->](Mc02.html)
 
 ### Introduzione
-
 1 Inizia qui la presentazione [1] di [Gesù](/g/Gesù "wikilink") [Cristo](/Cristo "wikilink") [Figlio di Dio](/Figlio_di_Dio "wikilink").
 
 2-3 Il libro del profeta Isaia dice: *Guarda, io ti faccio precedere dal mio portavoce e apripista. Voce di uno che grida nel deserto: "Sistemate la strada del [Padrone](/g/Signore "wikilink"), raddrizzate i suoi sentieri".*[2]
@@ -20,7 +19,6 @@ title: Mc01
 12-13 Subito dopo, Spirito di Dio portò Gesù nel deserto, dove rimase per quaranta giorni e dove fu tentato dall'Angelo Bugiardo[8] . Rimase là con le bestie selvatiche, e gli angeli [9] lo servivano.
 
 ### Gesù predica e convoca i primi seguaci
-
 14-15 In seguito, dopo l'arresto di Giovanni, Gesù si trasferì in Galilea per predicare il messaggio della salvezza di Dio. Gesù diceva a tutti: "È arrivato il momento: il governo di Dio è vicino! Pentitevi dei vostri errori e fate vostro questo messaggio!"
 
 16-18 Un giorno, mentre Gesù passeggiava lungo la riva del lago di Galilea, vide due pescatori, Simone e suo fratello Andrea, che buttavano le reti. Gesù li chiamò: "Venite, seguitemi e vi farò diventare pescatori di uomini!" Immediatamente i due lasciarono le reti e andarono con lui.
@@ -28,7 +26,6 @@ title: Mc01
 19-20 Poco più avanti, Gesù vide Giacomo e Giovanni, figli di Zebedeo, che riparavano le reti nella barca. Gesù li chiamò e loro lo seguirono, abbandonando il padre con i suoi dipendenti.
 
 ### Liberazioni di Gesù
-
 21-22 Gesù e i suoi compagni arrivarono alla città di Cafarnao, e, un sabato mattina, entrarono nella sinagoga[10], dove Gesù si mise a insegnare. I presenti rimanevano stupiti dalle sue parole, perchè insegnava con autorevolezza, diversamente dai professori dell'epoca.
 
 23-24 Tra gli ascoltatori c'era un signore in preda ad uno spirito del male[11], che si mise ad urlare: "Che vuoi da noi, Gesù di Nazaret? Sei venuto per distruggerci? Io so che tu sei il Consacrato a Dio.
@@ -46,20 +43,12 @@ title: Mc01
 38-39 Ma Gesù rispose: "Dobbiamo proseguire verso le altre città e portare anche lì il mio messaggio, perché questa è la mia missione". Così Gesù girò tutta la provincia della Galilea, predicando nelle sinagoghe e liberando molte persone dalla forza degli spiriti del male.
 
 ### Guarigione di un lebbroso
-
 40-42 Una volta gli si avvicinò un lebbroso che, inginocchiato davanti a lui, cominciò a pregarlo: "Se vuoi, tu puoi guarirmi!" Gesù ebbe pietà di lui, lo toccò e disse: "Sì lo voglio: guarisci!" Immediatamente la lebbra sparì, e fu guarito.
 
 43-44 Gesù lo mandò via, e gli raccomandò: "Vai subito a farti controllare dal sacerdote, ma non raccontare niente a nessuno. Poi, fai l'offerta secondo le regole di Mosé per la guarigione dalla lebbra, per far sapere a tutti che sei guarito."
 
 45 Appena partito, però, quel signore cominciò a urlare a tutti la notizia della sua guarigione, col risultato che ben presto Gesù fu circondato da una folla tale che non poteva più entrare liberamente in nessuna città; doveva starsene fuori, negli spazi aperti dove andava a trovarlo gente da tutte le parti.
 
- [[Mc02|>](Mc02)
-
-Note
-----
-
-<references>
-</references>
 
 [1] [vangelo](/g/vangelo "wikilink")
 
@@ -82,3 +71,5 @@ Note
 [10] sinagoga
 
 [11] demonio
+
+ [capitolo successivo ->](Mc02.html)
