--- a/pages/Mc03.md
+++ b/pages/Mc03.md
@@ -3,11 +3,9 @@ layout: page
 title: Mc03
 ---
 
-[[Mc02|<]] (Mc02) [[Mc04|>](Mc04)
+[[Mc02|<]](Mc02) [[Mc04|>](Mc04)
 
-Gesù guarisce
--------------
-
+### Gesù guarisce
 1-2 Poi entrò di nuovo nella sinagoga, dove vide un signore con la mano paralizzata. Siccome era sabato[1] la gente lo teneva d'occhio per vedere se avrebbe guarito la mano del paralizzato e se potevano accusarlo di qualcosa.
 
 3-4 Allora Gesù chiese al signore con la mano paralizzata di alzarsi davanti a tutti, e si rivolse ai presenti chiedendo: "Nel giorno del riposo bisogna fare del bene o del male? In questo giorno si può salvare una persona o bisogna lasciarla morire?". Nessuno rispondeva.
@@ -22,9 +20,7 @@ Gesù guarisce
 
 11-12 Quando lo vedevano, i posseduti cadevano ai suoi piedi gridando: "Tu sei il Figlio di Dio!" Ma Gesù li sgridava con forza perché non voleva che rivelassero la sua identità.
 
-Seguaci e oppositori
---------------------
-
+### Seguaci e oppositori
 13-14 Poco dopo, Gesù salì sulla collina, portandosi quelli che aveva scelto. Scelse dodici allievi per averli vicino e mandarli a predicare, e gli diede l'autorità di liberare dagli spiriti del male.
 
 16 I dodici si chiamavano: Simone, che Gesù chiamò Pietro, Giacomo e Giovanni (figli di Zebedeo, che Gesù soprannominò "figli del tuono"), Andrea, Filippo, Bartolomeo, Matteo, Tommaso, Giacomo (figlio di Alfeo), Taddeo, Simone (il rivoluzionario), e Giuda Iscariota (che poi lo tradì).
@@ -39,14 +35,12 @@ Seguaci e oppositori
 
 30 Gesù diceva queste cose perché alcuni sostenevano che aveva compiuto i suoi miracoli grazie all'aiuto di uno spirito del male.
 
-La mia famiglia
----------------
-
+### La mia famiglia
 31-32 A un certo punto, arrivarono sua madre e i suoi fratelli, che lo fecero chiamare per farlo uscire. Una folla lo circondava, seduta, e gli passò il messaggio, dicendogli: "Tua madre, i tuoi fratelli e le tue sorelle sono fuori e vogliono vederti".
 
 33-34 E Gesù rispose: "Chi è mia madre, e chi sono i miei fratelli?" Guardando quelli che gli stavano attorno, aggiunse: "Vedete? Questi sono mia madre e i miei fratelli! Chiunque ubbidisce a Dio è mio fratello, mia sorella e mia madre".
 
-[[Mc02|<]] (Mc02) [[Mc04|>](Mc04)
+[[Mc02|<]](./Mc02) [[Mc04|>](./Mc04)
 
 Note
 ----
