--- a/pages/Mc04.md
+++ b/pages/Mc04.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc04
 ---
 
-Il seminatore
--------------
-
+### Il seminatore
 1 Gesù riprese ad insegnare lungo il lago, ma fu circondato da una folla
 enorme. Era così pressato che dovette salire e sedersi dentro una barca
 in riva al lago, mentre la gente lo ascoltava dalla spiaggia.
@@ -48,9 +46,7 @@ il seme su terreno fertile, sono quelli che ascoltano il messaggio, lo
 vivono personalmente e portano frutto trenta, sessanta, o cento volte
 tanto»
 
-Altri racconti
---------------
-
+### Altri racconti
 21-23 Poi disse: “Ma voi accendete la luce e poi la coprite? Montate i
 lampadari sotto il letto o sul soffitto? Sappiate che le cose nascoste
 vengono alla luce, e i segreti allo scoperto. Chi vuole capire,
@@ -78,9 +74,7 @@ uccelli usano per fare il nido.”
 dove erano in grado di capire. Con gli altri parlava solo per storielle,
 ma ai suoi allievi spiegava tutto in privato.
 
-Gesù calma la tempesta
-----------------------
-
+### Gesù calma la tempesta
 35-36 Lo stesso giorno, al tramonto, disse agli allievi: “Andiamo
 all’altra riva.” Lasciando indietro la folla, lo accompagnarono in
 barca, così com’era, insieme ad altre barche.
