--- a/pages/Mc05.md
+++ b/pages/Mc05.md
@@ -3,12 +3,7 @@ layout: page
 title: Mc05
 ---
 
-Marco 5
-=======
-
-L’indemoniato
--------------
-
+### L’indemoniato
 1-2 Arrivarono all’altra riva del lago, nella regione dei Geraseni. Gesù
 era appena sceso dalla barca, quando improvvisamente gli corse incontro
 un indemoniato che veniva dal cimitero.
@@ -56,9 +51,7 @@ tutto quello che Dio ha fatto per te, e come ti è venuto incontro!”
 zona delle Dieci Città le cose stupende che Gesù aveva fatto per lui, e
 tutti rimanevano sconvolti.
 
-Gesù risuscita una ragazza e guarisce una signora
--------------------------------------------------
-
+### Gesù risuscita una ragazza e guarisce una signora
 21-24 Quando Gesù arrivò all’altra riva del lago in barca, fu circondato
 da una folla immensa. Improvvisamente arrivò un capo di sinagoga, di
 nome Iairo che si avvicinò e si buttò ai piedi di Gesù, implorandolo di
