--- a/pages/Mc06.md
+++ b/pages/Mc06.md
@@ -3,12 +3,7 @@ layout: page
 title: Mc06
 ---
 
-Marco 6
-=======
-
-Gesù rifiutato a casa sua
--------------------------
-
+### Gesù rifiutato a casa sua
 1 Poi Gesù se ne andò da quella zona e tornò con gli allievi al paese
 dove era cresciuto (Nazaret).
 
@@ -27,9 +22,7 @@ tra di loro, tranne qualche guarigione di malati, su cui poggiò le mani.
 Rimase sorpreso che non si fidavano di lui e cominciò a girare nei paesi
 vicini, insegnando alla gente.
 
-I dodici in missione
---------------------
-
+### I dodici in missione
 6-11 Un giorno, raccolse i dodici allievi e iniziò a inviarli in
 missione, in coppia, autorizzandoli a cacciare gli spiriti del male. Per
 il viaggio, disse di portarsi solo un bastone e non provviste o borse o
@@ -43,9 +36,7 @@ gesto sarà un avvertimento per loro.”
 cambiare vita. Cacciarono anche molti spiriti del male, e guarirono
 molti malati, con il rito di bagnarli con olio.
 
-Muore Giovanni il Battezzatore
-------------------------------
-
+### Muore Giovanni il Battezzatore
 14-15 Ben presto il re Erode venne a sapere di Gesù, perché si parlava
 di lui dappertutto. Alcuni pensavano che fosse Giovanni il Battezzatore
 ritornato in vita. E la gente diceva: “Per forza fa quelle cose
@@ -89,9 +80,7 @@ sua volta, lo portò alla madre.
 29 Quando lo vennero a sapere i seguaci di Giovanni, andarono a ritirare
 il suo corpo e lo seppellirono in una tomba.
 
-Cibo per cinquemila persone
----------------------------
-
+### Cibo per cinquemila persone
 30 Gli
 [allievi](../master/glossario.txt "apostoli o testimoni; glossario: apostolo"),
 rientrando dal loro giro, si presentarono a Gesù e gli raccontarono
@@ -134,9 +123,7 @@ sazietà.
 43-44 Quella volta mangiarono circa cinquemila persone e alla fine si
 raccolsero dodici ceste di avanzi.
 
-Gesù cammmina sull’acqua
-------------------------
-
+### Gesù cammmina sull’acqua
 45-46 Subito dopo, Gesù fece risalire i suoi allievi sulla barca, e gli
 ordinò di attraversare il lago in direzione di Betsaida, dove li avrebbe
 raggiunti. Voleva rimanere ancora un po’ per salutare la gente che
@@ -157,9 +144,7 @@ allievi rimasero a bocca aperta, perché non avevano capito il miracolo
 della moltiplicazione del pane. Anzi, avevano grosse difficoltà a
 seguirlo.
 
-Malati guariti a Gennesaret
----------------------------
-
+### Malati guariti a Gennesaret
 53-55 Arrivati a Gennesaret, sull’altra riva, gettarono l’àncora e
 scesero a terra. Le persone riconobbero subito Gesù e fecero correre la
 voce. Dovunque andava, gli portavano malati in barella.
