--- a/pages/Mc07.md
+++ b/pages/Mc07.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc07
 ---
 
-Fate quello che è giusto
-------------------------
-
+### Fate quello che è giusto
 1-2 Un giorno i Farisei e alcuni professori della Bibbia, arrivati da
 Gerusalemme, si radunarono attorno a Gesù. Si accorsero che alcuni dei
 suoi seguaci mangiavano senza rispettare la tradizione del lavaggio
@@ -54,9 +52,7 @@ l’insoddisfazione, la cattiveria, l’inganno, l’immoralità, l’invidia, l
 maldicenza, la superbia e tutte le follie. Sono tutte queste cattiverie
 che, uscendo dalla persona, la contaminano e la rendono impura!”.
 
-Gesù e la fiducia della donna straniera
----------------------------------------
-
+### Gesù e la fiducia della donna straniera
 24 Gesù partì dalla Galilea per dirigersi verso la zona di Tiro e Sidone
 e si fermò in una casa. Cercò di non farlo sapere a nessuno, ma non
 riuscì a passare inosservato.
@@ -74,9 +70,7 @@ che lo spirito del male ha lasciato tua figlia”. Quando la signora
 arrivò a casa trovò la bambina sdraiata sul letto e il demonio se n’era
 andato.
 
-Il sordomuto
-------------
-
+### Il sordomuto
 31 Dalla zona di Tiro, Gesù passò per la città di Sidone e poi tornò
 verso il lago di Galilea, nella zona delle Dieci Città.
 
