--- a/pages/Mc08.md
+++ b/pages/Mc08.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc08
 ---
 
-Cibo per quattromila
---------------------
-
+### Cibo per quattromila
 1-3 Di nuovo, in quel periodo, si radunò una folla immensa, e ancora una
 volta la gente rimase senza cibo. Gesù allora chiamò i suoi allievi:
 “Sono preoccupato per questa gente” disse, “è qui da tre giorni e non ha
@@ -51,9 +49,7 @@ recuperato?” “Dodici” risposero gli allievi. E quando ho dato da
 mangiare a quattromila persone con sette pani quanto cibo avanzò?"
 “Sette ceste” risposero. “E ancora non avete capito?”
 
-Il cieco di Betsaida
---------------------
-
+### Il cieco di Betsaida
 22 Arrivati a Betsaida, alcune persone gli portarono un cieco,
 supplicando Gesù di toccarlo.
 
@@ -65,9 +61,7 @@ Allora Gesù mise ancora le mani sugli occhi del cieco, che guardò di
 nuovo e scoprì di essere guarito e di vedere tutto chiaramente. Gesù lo
 rimandò direttamente a casa: “Non passare nemmeno dal paese” gli ordinò.
 
-Chi è Gesù?
------------
-
+### Chi è Gesù?
 27-28 Poi, insieme agli allievi, andò verso i paesi della zona di
 Cesarèa di Filippo. Per strada, chiese a loro: “Secondo la gente, chi
 sono io?” “Alcuni pensano che tu sia Giovanni il Battezzatore” risposero
