--- a/pages/Mc09.md
+++ b/pages/Mc09.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc09
 ---
 
-La trasformazione
------------------
-
+### La trasformazione
 1 Gesù diceva: “Ascoltate bene: alcuni di voi qui non moriranno senza
 aver visto il [governo di
 Dio](../glossario.txt "glossario: governo di Dio") stabilirsi con
@@ -37,9 +35,7 @@ del”Figlio dell’Uomo“? Che deve soffire molto ed essere disprezzato. Ma
 sappiate che Elia è già venuto e l’hanno trattato come volevano, come
 preannunciato dalla Bibbia”.
 
-Un ragazzo posseduto
---------------------
-
+### Un ragazzo posseduto
 14 Quando raggiunsero gli altri allievi, li trovarono circondati da una
 folla enorme, tra cui dei professori di Mosé che discutevano con loro.
 
@@ -78,9 +74,7 @@ chiesero: “Perché noi non siamo riusciti a cacciare quello spirito?”
 Gesù rispose: “Con questo tipo di spirito, c’è un solo modo: con la
 preghiera”.
 
-Grandi o piccoli?
------------------
-
+### Grandi o piccoli?
 30-32 Lasciarono quella zona e attraversarono la Galilea, dove Gesù
 cercava di passare inosservato perché stava insegnando agli allievi.
 Diceva: “Il Prescelto di Dio sarà tradito e ucciso, ma dopo tre giorni
@@ -98,9 +92,7 @@ Fece venire un bambino che era lì, lo prese in braccio e disse: “Chi
 accoglie un piccolino come questo a nome mio, accoglierà me. E chi
 accoglie me, non riceve me, ma la persona che mi ha mandato”.
 
-Amico o nemico?
----------------
-
+### Amico o nemico?
 38-42 Giovanni intervenne: “Professore, abbiamo visto un signore che, a
 nome tuo, liberava gente posseduta da spiriti e gli abbiamo detto di non
 farlo, perché non appartiene al nostro gruppo.” Ma Gesù rispose:
