--- a/pages/Mc10.md
+++ b/pages/Mc10.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc10
 ---
 
-Il divorzio
------------
-
+### Il divorzio
 1 Poi Gesù partì (da Cafàrnao) andando verso sud, verso il confine della
 Giudea oltre il fiume Giordano. Per l’ennesima volta fu circondato da
 una grande folla. E, come sempre, Gesù insegnava.
@@ -26,9 +24,7 @@ Gesù disse: “Se uno divorzia da sua moglie, e sposa un’altra, lui la
 tradisce. E se una moglie divorzia dal marito e si risposa anche lei lo
 tradisce.[^10]
 
-I bambini
----------
-
+### I bambini
 13-16 Alcune persone portarono dei bambini a Gesù per farli benedire, ma
 furono sgridati dagli allievi. Quando Gesù se ne accorse, si arrabbiò
 con loro e disse: “Non mettevi fra me e i bambini, perché la
@@ -38,9 +34,7 @@ bambino, non entrerà nella sua nazione. Poi prese in braccio dei bambini
 , gli appoggiò le mani e recitò una
 [benedizione](../master/glossario.txt "glossario: benedizione").
 
-Il giovane ricco
-----------------
-
+### Il giovane ricco
 17-20 Mentre stava andando via, arrivò di corsa un tipo che si
 inginocchiò davanti a lui e gli chiese: “Maestro Buono, cosa devo fare
 per guadagnarmi il paradiso?” “Perché mi chiami”Buono“?” disse Gesù.
@@ -74,17 +68,14 @@ terre, e anche persecuzioni. Nel mondo futuro, poi, avrà anche la vita
 per sempre. Ma molti che sembrano importanti oggi, saranno gli ultimi e
 molti che sono gli ultimi oggi, saranno i primi.
 
-Chi avrà i posti migliori?
---------------------------
-
+### Chi avrà i posti migliori?
 32 Gesù si avviò verso Gerusalemme davanti agli allievi impensieriti e
 altri seguaci impauriti. Prendendo da parte i dodici, spiegò quello che
 gli doveva capitare.
 
 33-34 “Stiamo andando a Gerusalemme” disse, “ed io, Uomo Figlio di
 Dio[^12], sarò tradito e trascinato davanti ai capi dei sacerdoti e i
-[professori di
-Mosè](../master/glossario.txt "glossario: legge di Mosè"), che mi
+[professori di Mosè](../master/glossario.txt "glossario: legge di Mosè"), che mi
 condanneranno a morte. Poi mi consegneranno ai romani che mi prenderanno
 in giro e mi sputeranno addosso, mi frusteranno e mi uccideranno. Ma
 dopo tre giorni tornerò vivo!”.
@@ -110,9 +101,7 @@ essere schiavo di tutti. Anch’io, il Prescelto di Dio, non sono venuto
 qui per essere servito, ma per servire gli altri e per riscattare molta
 gente con il sacrificio della mia vita.”
 
-Un cieco guarito
-----------------
-
+### Un cieco guarito
 46 Arrivati a Gèrico, uscirono dalla città e furono seguiti da una folla
 immensa. Un mendicante cieco, che si chiamava Bartimèo, figlio di Timèo,
 era seduto lungo la strada e chiedeva l’elemosina.
