--- a/pages/Mc11.md
+++ b/pages/Mc11.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc11
 ---
 
-Entrata trionfale a Gerusalemme
--------------------------------
-
+### Entrata trionfale a Gerusalemme
 1-3 Quando arrivarono ai paesini chiamati Bètfage e Betània, alla
 periferia di Gerusalemme, e si trovavano vicino alla Collina degli
 Ulivi, Gesù mandò avanti due dei suoi allievi con queste istruzioni:
@@ -39,9 +37,7 @@ frutto, ma non ne trovò. Infatti c’erano solo foglie, perchè non era
 stagione di fichi. Allora Gesù disse all’albero: “Nessuno mangerà più i
 tuoi frutti!” E gli allievi lo sentirono.
 
-Gesù nel Tempio
----------------
-
+### Gesù nel Tempio
 15-16 Quando arrivarono a Gerusalemme, Gesù entrò nel Tempio e cominciò
 a cacciare via i commercianti e i loro clienti. Rovesciò le scrivanie
 dei cambiavalute e le bancarelle dei venditori di colombi e vietò a
@@ -73,9 +69,7 @@ qualche torto, così anche vostro Padre lassù perdonerà i vostri!
 (26 Ma se voi non li perdonate, neppure vostro Padre nel cielo vi
 perdonerà)
 
-Chi ti autorizza?
------------------
-
+### Chi ti autorizza?
 27-28 Intanto erano arrivati di nuovo a Gerusalemme. Mentre Gesù
 passeggiava nel Tempio i capi sacerdoti, i professori di Mosè e i capi
 del popolo si avvicinarono per interrogarlo: “Con che diritto fai queste
