--- a/pages/Mc13.md
+++ b/pages/Mc13.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc13
 ---
 
-La fine del mondo
------------------
-
+### La fine del mondo
 1-2 Mentre Gesù usciva dal
 [Tempio](../master/mappa.txt "il Tempio di Gerusalemme; mappa: Tempio"),
 uno dei suoi allievi esclamò: “Professore, guarda che pietre enormi e
@@ -58,9 +56,7 @@ inviati di Dio e falsi profeti che faranno miracoli incredibili per
 ingannare perfino quelli scelti da Dio, se fosse possibile. Ma voi,
 state attenti! Vi ho avvertito per tempo!
 
-Il ritorno di Gesù
-------------------
-
+### Il ritorno di Gesù
 24-25 “Nel periodo di quelle difficoltà,”il sole si oscurerà e la luna
 non splenderà più, le stelle cadranno dal cielo e i governatori del
 cielo verranno sconvolti“. [^19]
