--- a/pages/Mc15.md
+++ b/pages/Mc15.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc15
 ---
 
-Da Pilato: la condanna
-----------------------
-
+### Da Pilato: la condanna
 1 La mattina presto, i Sacerdoti Capi e i consiglieri, gli esperti di
 Bibbia e la Corte Suprema al completo si riunirono per discutere cosa
 fare. Alla fine, fecero legare Gesù e lo portarono da Pilato (il
@@ -46,9 +44,7 @@ crocifiggerlo. In quel momento tornava dalla campagna un signore di nome
 Simone di Cirene, padre di Alessandro e Rufo. I soldati lo costrinsero a
 portare la croce di Gesù.
 
-La crocefissione
-----------------
-
+### La crocefissione
 22-25 Portarono Gesù in un posto detto “Gòlgota” (cioè “luogo del
 teschio”). Lì gli offrirono del vino misto a mirra, ma Gesù lo rifiutò.
 Lo inchiodarono alla croce e giocarono a dadi i suoi vestiti, per
@@ -93,9 +89,7 @@ Maria Maddalena, Maria (la madre di Giacomo “il piccolo” e di Iose),
 Salomé ed altre. Queste donne si erano prese cura di Gesù da quando era
 nella regione della Galilea e lo avevano seguito fino a Gerusalemme.
 
-La sepoltura
-------------
-
+### La sepoltura
 42-43 Ormai era tardo pomeriggio della vigilia della festa, quando si
 finivano i preparativi. Giuseppe di Arimatèa, onorato membro del Tribunale Ebraico che aspettava
 fiducioso il governo di Dio, si fece coraggio e andò da Pilato a
