--- a/pages/Mc16.md
+++ b/pages/Mc16.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc16
 ---
 
-É vivo!
--------
-
+### É vivo!
 1-2 Finita la festa, Maria Maddalena, Salomé e Maria madre di Giacomo
 andarono a comprare dei prodotti per profumare[^27] il cadavere di Gesù,
 e all’alba della domenica mattina, molto presto, andarono alla tomba.
@@ -26,8 +24,7 @@ aveva predetto“.
 8 Le donne si allontanarono di corsa dalla tomba tremando e troppo
 spaventate per parlare.
 
-Gli ultimi giorni di Gesù sulla terra
--------------------------------------
+### Gli ultimi giorni di Gesù sulla terra
 [^28]
 
 9-11 Era domenica mattina presto, quando Gesù tornò in vita, e la prima
