--- a/pages/Mc02.md
+++ b/pages/Mc02.md
@@ -5,9 +5,7 @@ title: Mc02
 
 [[Mc01|<]] (Mc01) [[Mc03|>](Mc03)
 
-Guarire e perdonare
--------------------
-
+### Guarire e perdonare
 1-4 Alcuni giorni dopo, Gesù tornò a Cafàrnao, e si sparse la voce che era a casa di uno. Rapidamente, arrivò una tale folla che non c'era più posto per nessuno, nemmeno fuori dalla porta. Gesù presentava il messaggio di Dio. Arrivarono anche quattro signori portando un disabile. Non riuscendo a farsi largo tra la folla, cercarono di raggiungere Gesù facendo un buco nel tetto proprio sopra la sua testa, e calando l'amico paralizzato sulla barella.
 
 5 Gesù vedendo la loro fiducia, disse al malato "Caro, i tuoi fallimenti sono stati perdonati."
@@ -18,40 +16,27 @@ Guarire e perdonare
 
 12 Quel signore saltò in piedi, raccolse la barella e si fece largo tra i presenti. Tutti rimasero a bocca aperta: "Mai vista una cosa del genere!" esclamavano, e davano il merito a Dio.
 
-Levi e la gentaglia
--------------------
-
+### Levi e la gentaglia
 13-14 Poi Gesù tornò sulla riva del lago, e lì si mise a insegnare alla folla che gli si raccoglieva intorno. Mentre passava, vide Levi, figlio di Alfeo, seduto alla sua scrivania, raccogliendo tasse [1]. "Vieni con me", gli disse, e Levi si alzò e se ne andò con lui.
 
 15 Quella sera, Gesù e i suoi allievi stretti mangiarono a casa di Levi, insieme a molti esattori e numerosi altri che pur disprezzando la religione [2], lo seguivano.
 
 16-17 Quando alcuni capi religiosi videro Gesù a tavola con esattori e bestemmiatori, chiesero ai suoi amici: "Come mai mangia e beve con quella gentaglia?" Gesù sentì le loro parole e intervenne: "Sono i malati che hanno bisogno del medico, e non i sani! Io non sono venuto per quelli che rispettano le regole, ma per quelli che sbagliano."
 
-Vecchio e nuovo
----------------
-
+### Vecchio e nuovo
 18 I seguaci di Giovanni "Il battezzatore" e i seguaci dei Farisei praticavano il digiuno. Alcuni chiesero a Gesù: "Perché i seguaci di Giovanni e dei Farisei praticano il digiuno e i tuoi no?"
 
 19-20 "Quando c'è un matrimonio gli invitati digiunano? Fin quando stanno con lo sposo, mangiano e bevono. Ma verrà il momento in cui lo sposo gli sarà tolto, e allora digiuneranno.
 
 21-22 Nessuno mette della stoffa nuova per rattoppare un vestito vecchio, perché la stoffa nuova si restringe e strapperà il vecchio, e il danno sarà peggiore. E neanche si mette il vino novello in bottiglie vecchie, che esplode e fa perdere vino e bottiglia. Il vino nuovo va in bottiglie nuove.
 
-Il padrone del giorno di riposo
--------------------------------
-
+### Il padrone del giorno di riposo
 23-24 Un'altra volta, di sabato [3], mentre Gesù e i suoi seguaci attraversavano i campi, alcuni di loro raccolsero delle spighe \[per mangiare il grano strada facendo\] Subito alcuni capi degli ebrei incominciarono a protestare con Gesù: "Non si fanno queste cose di sabato: è contro le regole di Mosé!"
 
 25-26 Gesù rispose: "Avete mai letto nella Bibbia cosa fece il Re Davide, quando lui e i suoi compagni erano affamati? Davide entrò nel Tempio di Dio (ai tempi del Sacerdote Capo Abiatar), e con la sua compagnia mangiò il pane speciale riservato ai sacerdoti."
 
 27-28 Poi aggiunse: "Il giorno di riposo[4] è stato fatto per l'uomo, e non l'uomo per il giorno di riposo!". Sappiate che io, il Protagonista [5], sono padrone anche del giorno di riposo."
 
-[[Mc01|<]] (Mc01) [[Mc03|>](Mc03)
-
-Note
-----
-
-<references>
-</references>
 
 [1] gli esattori erano molto mal visti, perché toglievano soldi ai loro compaesani per darli all'occupatore (i romani) e spesso se ne approfittavano
 
@@ -62,3 +47,5 @@ Note
 [4]
 
 [5] [Messia](/g/Messia "wikilink")
+
+[capitolo precedente<](Mc01.html) [capitolo successivo](Mc03.html)
