--- a/pages/Mc12.md
+++ b/pages/Mc12.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc12
 ---
 
-Il vigneto in affitto
----------------------
-
+### Il vigneto in affitto
 1-3 Gesù cominciò a raccontare delle storie ai presenti: “Un signore
 piantò un vigneto, lo chiuse con una siepe, scavò una buca per
 schiacciare l’uva e costruì una torretta per il guardiano, poi affittò
@@ -38,9 +36,7 @@ paura della folla. Perciò lo lasciarono e se ne andarono, mandando però
 altri capi religiosi e politici a parlare con Gesù, sperando di fargli
 dire qualcosa di compromettente.
 
-Le tasse
---------
-
+### Le tasse
 14-17 “Professore” dissero questi, “Sappiamo che lei è sincero e
 trasparente, non cerca favori e non guarda in faccia a nessuno, ma
 insegna la verità delle vie di Dio. Vorremmo sapere, quindi: è giusto, o
@@ -51,9 +47,7 @@ gliela portarono, Gesù chiese: “Di chi è questa faccia e questo nome?”
 che è di Cesare, e date a Dio quello che è di Dio!”. Davanti a questa
 risposta rimasero a bocca aperta.
 
-La vita dopo la morte
----------------------
-
+### La vita dopo la morte
 18-23 Poi si presentarono a Gesù alcuni Sadducei, un gruppo religioso
 che non credeva che i morti torneranno in vita[^16]. Anche loro fecero
 una domanda: “Professore, Mosè ci ha dato questa regola: se un uomo
@@ -77,9 +71,7 @@ quell’occasione Dio disse a Mosè: “IO SONO DIO di Abramo, DIO di Isacco
 e DIO di Giacobbe.” Questo non è Dio dei morti, ma dei vivi. Voi state
 sbagliando di grosso!
 
-La prima regola
----------------
-
+### La prima regola
 28-31 Uno dei professori di Mosè che era lì e aveva seguito la
 discussione capì che Gesù aveva risposto bene ai Sadducei, e gli si
 avvicinò per chiedere: “Di tutte le [regole di
@@ -108,9 +100,7 @@ ti avrò schiacciato tutti i tuoi nemici”*. Se Davide lo chiamava Capo,
 come può essere anche suo discendente?" E una folla immensa lo ascoltava
 affascinata.
 
-La piccola grande offerta
--------------------------
-
+### La piccola grande offerta
 38-40 Gesù insegnava anche: “Non fidatevi dei professori di Mosè a cui
 piace girare vestiti da religiosi di cultura, e si gonfiano quando la
 gente li saluta in passeggiata. Vogliono sedersi nei primi posti nelle
