--- a/pages/Mc14.md
+++ b/pages/Mc14.md
@@ -3,9 +3,7 @@ layout: page
 title: Mc14
 ---
 
-Il profumo
-----------
-
+### Il profumo
 1-2 Due giorni prima della
 [Pasqua](../master/glossario.txt "glossario: Pasqua") ebraica, durante
 la quale non si mangia pane lievitato, i capi sacerdoti e i [professori
@@ -27,9 +25,7 @@ mio corpo, anticipando la mia sepoltura[^22]. E aggiungo questo:
 dovunque nel mondo porteranno il mio messaggio, verrà ricordato anche
 quello che ha fatto questa donna.”
 
-L’ultima cena
--------------
-
+### L’ultima cena
 10-11 Giuda Iscariota, uno degli allievi, andò dai capi sacerdoti per
 mettersi d’accordo e tradire Gesù. Quando i capi sacerdoti capirono il
 motivo della sua visita, furono molto contenti e gli promisero una
@@ -79,9 +75,7 @@ tre volte che non mi conosci”. “Ma no!” esclamò Pietro. “Neanche se
 dovessi morire con te! Non ti rinnegherò mai!” E gli altri allievi
 dicevano lo stesso.
 
-Gesù arrestato
---------------
-
+### Gesù arrestato
 32 Erano arrivati intanto in un uliveto, detto Getsèmani. Gesù ordinò ai
 suoi allievi: “State seduti quì, che vado a pregare”.
 
@@ -127,9 +121,7 @@ punto, gli allievi scapparono e lo abbandonarono.
 specie di lenzuolo. Quando cercarono di prenderlo, lasciò cadere il
 lenzuolo e scappò tutto nudo.
 
-Il processo
------------
-
+### Il processo
 53 Gesù fu portato dal [Sacerdote Capo][], dove si riunirono tutti i
 capi sacerdoti e gli altri capi religiosi.
 
@@ -163,9 +155,7 @@ lo giudicate?” Tutti votarono per la condanna.
 a colpirlo e a prenderlo in giro, dicendo: “Ci fai una profezia?”. Anche
 le guardie lo picchiavano.
 
-Pietro disconosce Gesù
-----------------------
-
+### Pietro disconosce Gesù
 66-68 Nel frattempo, Pietro era rimasto sotto, nel cortile. Una delle
 serve del Sacerdote Capo, arrivò e lo vide scaldarsi vicino al fuoco; lo
 osservò e disse: “Anche tu eri con Gesù di [Nazarèt][]! Pietro negò:”Non
