link tra capitoli, indice a lista

--- a/pages/Mc01.md
+++ b/pages/Mc01.md
@@ -49,7 +49,7 @@ title: Mc01
 
 45 Appena partito, però, quel signore cominciò a urlare a tutti la notizia della sua guarigione, col risultato che ben presto Gesù fu circondato da una folla tale che non poteva più entrare liberamente in nessuna città; doveva starsene fuori, negli spazi aperti dove andava a trovarlo gente da tutte le parti.
 
-
+###### Note
 [1] [vangelo](/g/vangelo "wikilink")
 
 [2] la seconda parte si trova in Is 40:3, ma la prima parte non ha un corrispondente in Isaia, semmai in Esodo 23:20 e Mal. 3:1
