--- a/pages/Mc02.md
+++ b/pages/Mc02.md
@@ -3,7 +3,7 @@ layout: page
 title: Mc02
 ---
 
-[[Mc01|<]] (Mc01) [[Mc03|>](Mc03)
+[<-capitolo precedente](Mc01.html) [capitolo successivo->](Mc03.html)
 
 ### Guarire e perdonare
 1-4 Alcuni giorni dopo, Gesù tornò a Cafàrnao, e si sparse la voce che era a casa di uno. Rapidamente, arrivò una tale folla che non c'era più posto per nessuno, nemmeno fuori dalla porta. Gesù presentava il messaggio di Dio. Arrivarono anche quattro signori portando un disabile. Non riuscendo a farsi largo tra la folla, cercarono di raggiungere Gesù facendo un buco nel tetto proprio sopra la sua testa, e calando l'amico paralizzato sulla barella.
@@ -37,7 +37,7 @@ title: Mc02
 
 27-28 Poi aggiunse: "Il giorno di riposo[4] è stato fatto per l'uomo, e non l'uomo per il giorno di riposo!". Sappiate che io, il Protagonista [5], sono padrone anche del giorno di riposo."
 
-
+###### Note
 [1] gli esattori erano molto mal visti, perché toglievano soldi ai loro compaesani per darli all'occupatore (i romani) e spesso se ne approfittavano
 
 [2] [peccatori](/G/peccatori "wikilink")
