--- a/pages/Mc04.md
+++ b/pages/Mc04.md
@@ -89,3 +89,6 @@ Calmati!”. Il vento scomparve e si fece calma piatta. E rivolgendosi
 agli allievi: “Perché eravate così spaventati? Non vi fidate ancora?”
 Gli allievi erano terrorizzati, e dicevano fra di loro: “Ma chi è questo
 qua? Perfino il vento e le onde gli ubbidiscono!”
+
+
+[<-indietro](Mc03.html) [avanti->](Mc05.html)
