--- a/pages/Mc05.md
+++ b/pages/Mc05.md
@@ -101,3 +101,5 @@ camminare, mentre i genitori facevano salti di gioia.
 43 Gesù ordinò ai genitori di non raccontare niente a nessuno, e suggerì
 di dare alla ragazza qualcosa da mangiare.
 
+
+[<-indietro](Mc04.html) [avanti->](Mc06.html)
