--- a/pages/Mc06.md
+++ b/pages/Mc06.md
@@ -153,3 +153,6 @@ voce. Dovunque andava, gli portavano malati in barella.
 campagna, gli portavano i malati nelle piazze e lo imploravano di
 lasciargli toccare almeno l’orlo dei suoi vestiti. E tutti quelli che lo
 toccavano venivano guariti.
+
+
+[<-indietro](Mc05.html) [avanti->](Mc07.html)
