--- a/pages/Mc07.md
+++ b/pages/Mc07.md
@@ -86,8 +86,9 @@ vietava, più ne parlavano. Erano talmente meravigliati per quello che
 Gesù aveva fatto, che esclamavano: “Fa sempre delle cose incredibili!
 Addirittura fa sentire i sordi e parlare i muti!”
 
+###### Note
 [^3]: Es 20:12; Deut 5:16
-
 [^4]: Es 21:17; Lev 20:9
-
 [^5]: nota dell’autore
+
+[<-indietro](Mc06.html) [avanti->](Mc08.html)
