--- a/pages/Mc09.md
+++ b/pages/Mc09.md
@@ -118,6 +118,10 @@ si spegne, perché tutti verranno preparati con il fuoco. Il sale è
 buono, ma se diventa insipido come potete ridargli sapore? Perciò
 abbiate un forte sapore di Dio, e vivete in pace tra di voi.[^8]
 
+###### Note
 [^8]: frasi di difficile interpretazione. Forse un riferimento alla
     carne offerta a Dio nel Patto Antico, che si preparava con il sale
     prima di arrostire.
+	
+
+[<-indietro](Mc08.html) [avanti->](Mc10.html)
