--- a/pages/Mc10.md
+++ b/pages/Mc10.md
@@ -119,6 +119,7 @@ cieco “Mi faccia recuperare la vista!” Gesù gli disse: “Puoi andare, la
 tua fiducia ti ha guarito!” In quel momento recuperò la vista e seguì
 Gesù per la strada!
 
+###### Note
 [^9]: Genesi 1:27; 5:2
 
 [^10]: vedi anche Mt 5:31-32, 19:1-12
@@ -128,3 +129,6 @@ Gesù per la strada!
 [^12]: Figlio dell’Uomo,
 
 [^13]: figlio di Davide, discendente del Re Davide
+
+
+[<-indietro](Mc09.html) [avanti->](Mc11.html)
