--- a/pages/Mc13.md
+++ b/pages/Mc13.md
@@ -87,5 +87,7 @@ prima dell’alba o di mattina presto. E se ritorna all’improvviso, non
 fatevi trovare addormentati! Mi raccomando, con voi e con tutti: fatevi
 trovare pronti!”
 
-
+###### Note
 [^19]: Ger 30:7; Dan 12:1; Gioele 2:2; Is. 13:10; 34:4
+
+[<-indietro](Mc12.html) [avanti->](Mc14.html)
