--- a/pages/Mc14.md
+++ b/pages/Mc14.md
@@ -172,20 +172,16 @@ lo conosco nemmeno, questo personaggio di cui parlate!”
 le parole di Gesù: “Prima che il gallo canti due volte, avrai già detto
 tre volte che non mi conosci”. E Pietro, ripensandoci, pianse.
 
-
-[^20]: si trattava di flaconi o bottigliette sigillate: l’apertura più
-    semplice era la rottura
-
+###### Note
+[^20]: si trattava di flaconi o bottigliette sigillate: l’apertura più semplice era la rottura
 [^21]: trecento monete d’argento o denarii, più di un anno di stipendio
-
-[^22]: i riti della sepoltura dell’epoca prevedevano la profumazione del
-    cadavere, per chi ne aveva le possibilità
-
-[^23]: l’agnello di Pasqua deve essere sacrificato a Dio, secondo le
-    regole della Pasqua ebraica
-
+[^22]: i riti della sepoltura dell’epoca prevedevano la profumazione del cadavere, per chi ne aveva le possibilità
+[^23]: l’agnello di Pasqua deve essere sacrificato a Dio, secondo le regole della Pasqua ebraica
 [^24]: vedi Zac 13:7
 [Sacerdote Capo]: ../master/glossario.txt "glossario: Sacerdote Capo"
 [Liberatore degli Ebrei]: ../master/glossario.txt "glossario: Messia"
 [Nazarèt]: ../master/mappa.txt "mappa: Nazarèt"
 [Galilea]: ../master/mappa.txt "mappa: Galilea"
+
+
+[<-indietro](Mc13.html) [avanti->](Mc15.html)
