--- a/pages/Mc15.md
+++ b/pages/Mc15.md
@@ -107,11 +107,11 @@ all’apertura.
 47 Maria Maddalena e Maria, madre di Iose, stavano a guardare dove
 veniva deposto il cadavere di Gesù.
 
-
+###### Note
 [^24]: il v.28: *Si realizzava così la profezia che diceva “Lui fu catalogato fra i malviventi”.* 
 è presente in alcune versioni, ma non nelle versioni più autorevoli.
-
 [^25]: citazione da Salmo 22:1
+[^26]: la morte per crocefissione (in genere per asfissia) doveva essere lenta e poteva arrivare anche dopo un giorno di agonia.
 
-[^26]: la morte per crocefissione (in genere per asfissia) doveva essere
-    lenta e poteva arrivare anche dopo un giorno di agonia.
+
+[<-indietro](Mc14.html) [avanti->](Mc16.html)
