--- a/pages/Mc16.md
+++ b/pages/Mc16.md
@@ -24,9 +24,7 @@ aveva predetto“.
 8 Le donne si allontanarono di corsa dalla tomba tremando e troppo
 spaventate per parlare.
 
-### Gli ultimi giorni di Gesù sulla terra
-[^28]
-
+### Gli ultimi giorni di Gesù sulla terra [^28]
 9-11 Era domenica mattina presto, quando Gesù tornò in vita, e la prima
 persona che lo vide fu Maria Maddalena, da cui aveva cacciato sette
 spiriti del male. Lei corse dagli allievi e li trovò tristi e con gli
@@ -55,12 +53,9 @@ andò a sedersi alla destra di Dio. Poi gli allievi partirono e
 predicarono dappertutto, e Dio li aiutò nella loro missione, confermando
 il suo messaggio con le manifestazioni che accompagnavano l’annuncio.
 
-[^27]: gli ebrei dell’epoca non imbalsamavano, ma coprivano con profumi
-    l’odore della decomposizione dei loro cari
-
+[^27]: gli ebrei dell’epoca non imbalsamavano, ma coprivano con profumi l’odore della decomposizione dei loro cari
 [^28]: questa sezione (vv.9-20) manca nelle versioni più antiche
-
-[^29]: Giuda, il traditore, aveva lasciato i dodici allievi scelti, che
-    erano rimasti in undici
-	
+[^29]: Giuda, il traditore, aveva lasciato i dodici allievi scelti, che erano rimasti in undici
 [messaggio]: ../master/glossario.txt “glossario: vangelo”
+
+[<-indietro](Mc15.html)
