--- a/pages/Mc08.md
+++ b/pages/Mc08.md
@@ -93,8 +93,9 @@ sappia che anch’io, il [Prescelto di
 Dio](../master/glossario.txt "glossario: Cristo"), mi vergognerò di lui
 quando sarò nello splendore di mio Padre circondato dalla sua corte[^7].
 
+###### Note
 [^6]: Geremia 5:21
-
 [^7]: letteralmente
-    [angeli](../master/glossario.txt "glossario: angeli") consacrati a
-    Dio.
+[angeli](../master/glossario.txt "glossario: angeli") consacrati a Dio.
+
+[<-indietro](Mc07.html) [avanti->](Mc09.html)
