--- a/pages/Mc01.md
+++ b/pages/Mc01.md
@@ -49,6 +49,8 @@ title: Mc01
 
 45 Appena partito, però, quel signore cominciò a urlare a tutti la notizia della sua guarigione, col risultato che ben presto Gesù fu circondato da una folla tale che non poteva più entrare liberamente in nessuna città; doveva starsene fuori, negli spazi aperti dove andava a trovarlo gente da tutte le parti.
 
+ [avanti->](Mc02.html)
+ 
 ###### Note
 [1] [vangelo](/g/vangelo "wikilink")
 
@@ -71,5 +73,3 @@ title: Mc01
 [10] sinagoga
 
 [11] demonio
-
- [capitolo successivo ->](Mc02.html)
