--- a/pages/Mc02.md
+++ b/pages/Mc02.md
@@ -37,15 +37,11 @@ title: Mc02
 
 27-28 Poi aggiunse: "Il giorno di riposo[4] è stato fatto per l'uomo, e non l'uomo per il giorno di riposo!". Sappiate che io, il Protagonista [5], sono padrone anche del giorno di riposo."
 
+[<-indietro](Mc01.html) [avanti->](Mc03.html)
+
 ###### Note
 [1] gli esattori erano molto mal visti, perché toglievano soldi ai loro compaesani per darli all'occupatore (i romani) e spesso se ne approfittavano
-
 [2] [peccatori](/G/peccatori "wikilink")
-
 [3] [Shabat, sabato, giorno di riposo](/g/shabat "wikilink")
-
 [4]
-
 [5] [Messia](/g/Messia "wikilink")
-
-[capitolo precedente<](Mc01.html) [capitolo successivo](Mc03.html)
