--- a/pages/Mc08.md
+++ b/pages/Mc08.md
@@ -89,13 +89,12 @@ sacrifica per me e per amore del mio messaggio la salverà.
 36-38 “A che serve guadagnare il mondo intero e poi perdere la propria
 vita? Con che cosa potete ricomprarla? Chiunque si vergogna di me e del
 mio messaggio davanti a questa società senza Dio e piena di colpe,
-sappia che anch’io, il [Prescelto di
-Dio](../master/glossario.txt "glossario: Cristo"), mi vergognerò di lui
+sappia che anch’io, il [Prescelto di Dio](../master/glossario.txt "glossario: Cristo"), mi vergognerò di lui
 quando sarò nello splendore di mio Padre circondato dalla sua corte[^7].
+
+[<-indietro](Mc07.html) [avanti->](Mc09.html)
 
 ###### Note
 [^6]: Geremia 5:21
 [^7]: letteralmente
 [angeli](../master/glossario.txt "glossario: angeli") consacrati a Dio.
-
-[<-indietro](Mc07.html) [avanti->](Mc09.html)
