--- a/pages/Mc16.md
+++ b/pages/Mc16.md
@@ -53,9 +53,10 @@ andò a sedersi alla destra di Dio. Poi gli allievi partirono e
 predicarono dappertutto, e Dio li aiutò nella loro missione, confermando
 il suo messaggio con le manifestazioni che accompagnavano l’annuncio.
 
+[<-indietro](Mc15.html)
+
+###### Note
 [^27]: gli ebrei dell’epoca non imbalsamavano, ma coprivano con profumi l’odore della decomposizione dei loro cari
 [^28]: questa sezione (vv.9-20) manca nelle versioni più antiche
 [^29]: Giuda, il traditore, aveva lasciato i dodici allievi scelti, che erano rimasti in undici
 [messaggio]: ../master/glossario.txt “glossario: vangelo”
-
-[<-indietro](Mc15.html)
